# distbackup

./: .gitignore  README.md  README_zh.md  feature.md  feature_zh.md  pyproject.toml
.codex/skills/pwsh-file-encoding/: SKILL.md
.codex/skills/pwsh-file-encoding/agents/: openai.yaml
distbackup/: __main__.py  cli.py  gui.py
distbackup/core/: __init__.py  _win32.py  differ.py  hashing.py  scanner.py  snapshot_manager.py  syncer.py
testdata/source/: readme - sr.md
testdata/source/config/: settings.json  users.csv
testdata/source/docs/: api.md  changelog.md  design.md
tests/: benchmark_results.json  conftest.py  test_differ.py  test_gui_logic.py  test_gui_static.py  test_hashing.py  test_integration.py  test_performance.py  test_scanner.py  test_snapshot_manager.py  test_syncer.py
